--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Open source protocol and Java framework for model-driven REST data services. 
-            Works on top of JAX RS and integrates with various backends, such as Apache Cayenne.">
+        <meta name="description" content="Open source protocol and Java framework for model-driven REST data services. Works on top of JAX RS and integrates with various backends, such as Apache Cayenne.">
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/img/fav/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/img/fav/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/img/fav/favicon-16x16.png">
+        <link rel="manifest" href="assets/img/fav/site.webmanifest">
+        <link rel="mask-icon" href="assets/img/fav/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut icon" href="assets/img/fav/favicon.ico">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-config" content="assets/img/fav/browserconfig.xml">
+        <meta name="theme-color" content="#ffffff">
         <title>agrest - Model-Driven REST Data Services</title>
         <link rel="canonical" href="http://agrest.io" />
         <link rel="stylesheet" href="assets/styles/main.css" />
@@ -27,12 +35,10 @@
         <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="videoModalTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-full" role="document">
                 <div class="modal-content">
+                    <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button> -->
                     <div class="modal-body">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe id="video" class="embed-responsive-item" src="https://www.youtube.com/embed/tyG9exmmmWo?enablejsapi=1&modestbranding=1&rel=0" frameborder="0" allowfullscreen></iframe>
+                        <div class="embed-responsive by-height embed-responsive-16by9">
+                            <div id="video" data-youtube-id="tyG9exmmmWo"></div>
                         </div>
                     </div>
                 </div>
@@ -42,7 +48,7 @@
         <section class="d-flex flex-column align-items-center justify-content-center" id="intro">
             <nav class="navbar navbar-expand-md navbar-light">
                 <div class="container">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="https://agrest.io/">
                         <img src="assets/img/logo.svg" alt="agrest">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,8 +62,8 @@
                                 <li class="nav-item"><a href="https://groups.google.com/forum/?#!forum/agrest-user" class="nav-link">Forum</a></li>
                             </ul>
                             <ul class="navbar-nav" id="navbar-social-links">
-                                <li class="nav-item"><a href="https://github.com/agrestio/agrest" class="nav-link"><img class="inline svg-icon" src="assets/img/fa/fab/github-brands.svg" alt="GitHub"></a></li>
-                                <li class="nav-item"><a href="https://twitter.com/AgrestProject" class="nav-link"><img class="inline svg-icon" src="assets/img/fa/fab/twitter-brands.svg" alt="Twitter"></a></li>
+                                <li class="nav-item"><a href="https://github.com/agrestio/agrest" class="nav-link"><img class="inline-svg icon-svg" src="assets/img/fa/fab/github-brands.svg" alt="GitHub"></a></li>
+                                <li class="nav-item"><a href="https://twitter.com/AgrestProject" class="nav-link"><img class="inline-svg icon-svg" src="assets/img/fa/fab/twitter-brands.svg" alt="Twitter"></a></li>
                             </ul>
                         </div>
                     </div>
@@ -72,7 +78,7 @@
                         <img class="img-fluid  mb-3 mb-md-4" src="assets/img/viz-intro.svg" alt="Agrest Flow">
                         <a href="#" data-toggle="modal" data-target="#videoModal" class="play-btn rounded-circle-corners">
                             <span class="play-btn-icon">
-                                <img class="svg-icon inline" src="assets/img/fa/fas/play-solid.svg" alt="Play">
+                                <img class="inline-svg icon-svg" src="assets/img/fa/fas/play-solid.svg" alt="Play">
                             </span>
                             <span class="play-btn-txt"><span class="text-uppercase">Video from</span> JEEConf</span>
                         </a>
@@ -175,7 +181,7 @@ public class MyEntityResource {
                                 </div>
                             </div>
                         </div> <!-- .Tabs : Getting Started -->
-                        <p class="text-center  mb-0">Read full documentation in <a href="#">Docs</a> section</p>
+                        <p class="text-center  mb-0">Read full documentation in <a href="docs/index.html">Docs</a> section</p>
                     </div>
                 </div>
             </div>
@@ -233,12 +239,12 @@ public class MyEntityResource {
                         <ul id="social-icons" class="list-unstyled list-inline  mb-0">
                             <li class="list-inline-item">
                                 <a href="https://github.com/agrestio/agrest">
-                                    <img class="svg-icon" src="assets/img/fa/fab/github-brands.svg" />
+                                    <img class="inline-svg" src="assets/img/fa/fab/github-brands.svg" />
                                 </a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="https://twitter.com/AgrestProject">
-                                    <img class="svg-icon" src="assets/img/fa/fab/twitter-brands.svg" />
+                                    <img class="inline-svg" src="assets/img/fa/fab/twitter-brands.svg" />
                                 </a>
                             </li>
                         </ul>
@@ -247,17 +253,13 @@ public class MyEntityResource {
             </div>
         </footer>
 
-        <!-- BS4JS -->
-        <script src="node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <!-- CUSTOM -->
+        <!-- Vendor -->
+        <script src="assets/scripts/vendor.min.js"></script>
         <!-- JS conditional comments IE -->
         <script type="text/javascript">
             if(/MSIE \d|Trident.*rv:/.test(navigator.userAgent))
-                document.write('<script src="node_modules/es6-promise/dist/es6-promise.auto.min.js"><\/script>\
-                                <script src="node_modules/cross-fetch/dist/cross-fetch.js"><\/script>');
+                document.write('<script src="assets/scripts/ie-support.min.js"><\/script>');
         </script>
-        <script src="assets/scripts/svg-processing.js"></script>
+        <script src="assets/scripts/main.js"></script>
     </body>
 </html>
