--- a/content/_index.html
+++ b/content/_index.html
@@ -95,7 +95,7 @@ public class MyEntityResource {
                         </div>
                     </div>
                 </div> <!-- .Tabs : Getting Started -->
-                <p class="text-center  mb-0">Read full documentation in <a href="docs/index.html">Docs</a> section</p>
+                <p class="text-center  mb-0">Read full documentation <a href="docs/index.html">here</a></p>
             </div>
         </div>
     </div>
