--- a/404.html
+++ b/404.html
@@ -20,9 +20,7 @@
     <title>agrest - Model-Driven REST Data Services</title>
     <link rel="canonical" href="http://agrest.io" />
 
-    <link href="/assets/app.css?f6a44dd4f9a6cb931f41" rel="stylesheet">
-<script type="text/javascript" src="/assets/app.js?f6a44dd4f9a6cb931f41"></script>
-
+    <link href="" rel="stylesheet"><script src="/assets/app.js?404727669160316f64a0"></script>
 
 </head>
   <body>
