deploy: 5e5cfefe39bc2c5984f9cac93fb11fc1183fc63c

--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
     <meta name="msapplication-config" content=" /images/fav/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <title>agrest - Model-Driven REST Data Services</title>
-    <link rel="canonical" href="http://agrest.io" />
+    <link rel="canonical" href="https://agrest.io/404.html" />
 
     <link href="" rel="stylesheet"><script src="/assets/app.js?e651377b7a1dff2662c3"></script>
 
