deploy: 11194f20448190024df323fa5c6b4c62d92ea4f3

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </script>
 
     <meta charset="utf-8">
-    <title>Agrest - Model-Driven REST Data Services</title>
+    <title>Agrest: Java REST API Framework | Official Website</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Open source protocol and Java framework for model-driven REST data services. Works on top of JAX RS and integrates with various backends, such as Apache Cayenne.">
+    <meta name="description" content="Explore Agrest, a Java REST API framework for efficient data services. Supports CRUD, JAX-RS, Cayenne ORM, and provides fine-grained security over HTTP/JSON.">
     <link rel="apple-touch-icon" sizes="180x180" href="/images/fav/apple-touch-icon.png">
     <link rel="icon" type="images/png" sizes="32x32" href=" /images/fav/favicon-32x32.png">
     <link rel="icon" type="images/png" sizes="16x16" href=" /images/fav/favicon-16x16.png">
